  Colin Watson  <cjwatson@debian.org>

	* src/check_mandirs.c (make_database_directory): New function.
	  (create_db, update_db): Use it.
	  (purge_missing): Check that the database exists before starting.
	* src/mandb.c (process_manpath): New function, split out from main.
	  Make the single_filename check aware that the file might be in a
	  per-locale subdirectory that we aren't processing right now.
	  (main): Use it. Move man_owner, purged, and strays to file scope.
	  Build databases for all per-locale subdirectories.
	* src/manp.c (check_and_add): New function.
	  (add_nls_manpath): Use check_and_add to reduce repetition. When
	  processing ll_CC.CODESET, try ll.CODESET after ll_CC.CODESET and
	  ll_CC but before ll.
	* src/straycats.c (straycats): Constify manpath argument.
	* include/manconfig.h.in (straycats): Update prototype.
	* docs/TODO: Update.

Fri Aug 31 14:52:22 BST 2007  Colin Watson  <cjwatson@debian.org>

	* src/man.c (maybe_update_file): Only recache pages automatically if
	  --update was given.

Fri Aug 31 04:54:45 BST 2007  Colin Watson  <cjwatson@debian.org>

	* lib/pipeline.c (pipeline_free): Call pipeline_wait if the pipeline
	  is still running.
	* lib/pipeline.h (pipeline_free): Document that this may happen.

Fri Aug 31 04:46:04 BST 2007  Colin Watson  <cjwatson@debian.org>

	* src/zsoelim.l (main): Call pipeline_install_sigchld.

Wed Aug 29 17:12:52 BST 2007  Lars Wirzenius  <liw@iki.fi>

	* po/fi.po: Adjust translation of "No manual entry for %s" (Debian
	  bug #320108).

Wed Aug 29 15:22:54 BST 2007  Clytie Siddall  <clytie@riverland.net.au>

	* po/vi.po: Update from Translation Project.

Wed Aug 29 15:18:34 BST 2007  Daniel Nylander  <po@danielnylander.se>

	* po/sv.po: Update from Translation Project.

Wed Aug 29 12:07:38 BST 2007  Colin Watson  <cjwatson@debian.org>

	* docs/NEWS: Reorganise slightly. Document mandb --quiet fixes.

Wed Aug 29 11:57:59 BST 2007  Colin Watson  <cjwatson@debian.org>
